--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 			<version>5.1.33</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-annotations</artifactId>
+			<version>3.5.6-Final</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javax</groupId>
@@ -70,10 +75,9 @@
 	</build>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<failOnMissingWebXml>false</failOnMissingWebXml>
-		<start-class>com.iqmsoft.glassfish4.spring.boot.Application</start-class>
 	</properties>
 	<repositories>
 		<repository>
